# nee-reads

./: .envrc.sample  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  agent-sandbox.toml  docker-compose.yml  opencode.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
api/: database.py  main.py
api/models/: schemas.py
api/routes/: books.py  library.py  status.py
api/services/: cache.py  openlibrary.py
designs/: card_dropdown.html  card_state.html  index.html  library.html  notification.html
tests/api/: conftest.py  test_books_route.py  test_cache_service.py  test_database.py  test_openlibrary_service.py
tests/e2e/: playwright.config.ts
tests/web/components/: SearchBar.test.tsx
tests/web/hooks/: useDebounce.test.ts
web/: index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: BookCard.tsx  BookGrid.tsx  EmptyState.tsx  Footer.tsx  LibraryEmptyState.tsx  LibraryPage.tsx  LoadingState.tsx  NoResults.tsx  Pagination.tsx  SearchBar.tsx  TabBar.tsx  Toast.tsx
web/src/hooks/: useDebounce.ts
web/src/services/: api.ts
web/src/types/: book.ts
