[project]
name = "nee-reads"
version = "0.1.0"
description = "A personal Goodreads clone for discovering books"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.28.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/api"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
